# wordle

./: .env.example  .gitignore  Cargo.toml  README.md
script/: generate_tls_cert.sh
src/: config.rs  lib.rs  main.rs  state.rs  utils.rs
src/api/: error.rs  mod.rs  models.rs
src/api/handlers/: game.rs  mod.rs  util.rs
src/auth/: error.rs  extractors.rs  jwt.rs  middleware.rs  mod.rs  models.rs  state.rs
src/common/: config.rs  mod.rs  types.rs  utils.rs
src/core/: mod.rs  state.rs
src/game/: error.rs  mod.rs  models.rs  state.rs  words.rs
src/models/: api.rs  game.rs  mod.rs  user.rs
src/repository/: error.rs  game.rs  mod.rs  user.rs
src/repository/database/: mod.rs
src/repository/database/postgres/: game.rs  mod.rs  user.rs
src/repository/memory/: game.rs  mod.rs  user.rs
src/server/: mod.rs  repository.rs
